bison/frontend/nginx_service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  ports:
    - port: 80
      targetPort: 80  # Ensure this matches the containerPort exposed by the Nginx pods
      protocol: TCP
  selector:
    tier: frontend  # Ensure this matches the labels of your Nginx pods
